<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nameGrayLight"
    tools:context=".Register">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="@dimen/login_size_image"
        android:layout_height="@dimen/login_size_image"
        android:src="@drawable/logo_login"

        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/regis_textView_note"/>

    <TextView
        android:id="@+id/regis_textView_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/regis_note"
        android:layout_marginBottom="@dimen/login_size_small"
        android:layout_above="@+id/regis_linear_first"/>

    <LinearLayout
        android:id="@+id/regis_linear_first"
        android:layout_width="@dimen/login_size_linear"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginTop="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            android:paddingLeft="@dimen/login_size"
            android:background="@drawable/botron"
            android:hint="@string/regis_1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginTop="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            android:paddingLeft="@dimen/login_size"
            android:background="@drawable/botron"
            android:hint="@string/regis_2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginTop="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            android:paddingLeft="@dimen/login_size"
            android:background="@drawable/botron"
            android:hint="@string/regis_3"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginTop="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            android:paddingLeft="@dimen/login_size"
            android:background="@drawable/botron"
            android:hint="@string/regis_4"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginTop="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            android:paddingLeft="@dimen/login_size"
            android:background="@drawable/botron"
            android:hint="@string/regis_5"/>
    </LinearLayout>

    <Button
        android:layout_width="@dimen/login_size_linear"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_size"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/login_size"
        android:textSize="@dimen/login_size_normal"
        android:text="@string/regis_dk"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/regis_linear_first"/>

</RelativeLayout>