<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Forget_passwordAcitivy">

    <ImageView
        android:id="@+id/image_forget"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/login_size_image"
        android:layout_height="80dp"
        android:src="@drawable/postblish"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/textView_forget"/>

    <TextView
        android:id="@+id/textView_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDark"
        android:gravity="center"
        android:layout_above="@id/linear_forget_first"
        android:text="@string/forget"/>

    <LinearLayout
        android:id="@+id/linear_forget_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/edt_forget_search"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_size_big"
            android:hint="@string/forget_edt"
            android:layout_gravity="center"
            android:textColorHint="@color/colorGray"
            android:paddingLeft="@dimen/login_size"
            android:singleLine="true"
            android:background="@drawable/botron">
        </EditText>

        <Button
            android:id="@+id/rsPass"
            android:background="@color/colorWhite"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset Password"
            style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:layout_marginTop="@dimen/login_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorDark"
            android:text="Hãy tìm tài khoản của bạn"/>

        <TextView
            android:layout_marginTop="@dimen/login_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#CD000000"
            android:text="Vui lòng nhập email để tìm kiếm tài khoản của bạn."/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_forget_return"
        android:layout_below="@id/linear_forget_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="@dimen/login_size"
        android:layout_marginRight="@dimen/login_size"
        android:layout_marginBottom="@dimen/login_size_big"
        android:text="@string/regis_quaylaiDn"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/login_size_small"
        style="?android:attr/borderlessButtonStyle"/>


</RelativeLayout>