<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_marginTop="120dp"
        android:id="@+id/image_login"
        android:layout_width="@dimen/login_size_image"
        android:layout_height="80dp"
        android:src="@drawable/postblish"
        android:layout_alignParentTop="true"
        android:layout_above="@id/linear_login_first"
        android:layout_centerHorizontal="true"/>

    <LinearLayout

        android:id="@+id/linear_login_first"
        android:layout_width="@dimen/login_size_linear"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            app:hintTextColor="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            >

            <EditText
                android:id="@+id/edt_login_email_sdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_sdt"
                android:drawableStart="@drawable/user"
                android:drawablePadding="@dimen/login_size"
                android:textColorHint="@color/colorGray"
                android:singleLine="true"
                android:paddingLeft="@dimen/login_size"
                android:textSize="@dimen/login_size_normal"
                android:background="@drawable/botron"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:hintTextColor="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginRight="@dimen/login_size"
            >

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/login_size"
                android:hint="@string/login_password"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/login_size"
                android:textColorHint="@color/colorGray"
                android:password="true"
                android:singleLine="true"
                android:textSize="@dimen/login_size_normal"
                android:background="@drawable/botron"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btn_login_dn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/login_size"
            android:layout_marginLeft="@dimen/login_size"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/login_size"
            android:text="@string/login_dn"
            android:textSize="15sp"
            android:background="@drawable/botron"
            tools:ignore="InvalidId" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_linear_second"
        android:layout_below="@id/linear_login_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            android:id="@+id/btn_login_dk"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/login_size"
            android:background="@color/colorWhite"
            android:paddingLeft="0dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:text="@string/regis_dk"
            android:textColor="@color/colorDark"
            android:textAllCaps="false"
            android:textSize="@dimen/login_size_small"
            android:textStyle="normal"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_login_quenmk"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/login_size"
            android:text="@string/login_quenmk"
            android:textAllCaps="false"
            android:paddingLeft="0dp"
            android:gravity="center"
            android:paddingRight="10dp"
            android:textSize="@dimen/login_size_small"
            android:textColor="@color/colorDark"
            android:textStyle="normal"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_login_split"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/login_size_small"
        android:layout_below="@id/linear_login_first"
        android:textColor="@color/colorDark"
        android:text="Hoặc"/>

    <LinearLayout
        android:id="@+id/login_linear_third"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linear_login_first"
        android:orientation="vertical"
        >

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login_byFB"
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginBottom="@dimen/login_size" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_byGoogle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>




</RelativeLayout>